Dither dosn't work in Blender Internal Renderer 2.75 rc2 #45237

Closed
opened 2015-06-29 21:40:56 +02:00 by Maik Henschel · 11 comments

System Information
Windows 8.1 64bit, NVIDIA GeForce GTX760

Blender Version
Broken: 2.75 rc2 Hash: c85a58a
Worked: 2.74 Hash: 000dfc0

Dither in postprocessing has no effect in final render (Blender internal) when i press F12.

Exact steps for others to reproduce the error
Open Blender
Load factory settings
Select Camera
press - [x]- [x]- [x]- [x]- [x][Return][F12]

then change dither to 2 and press [F12] again.
same color bandings are visible

**System Information** Windows 8.1 64bit, NVIDIA GeForce GTX760 **Blender Version** Broken: 2.75 rc2 Hash: c85a58a Worked: 2.74 Hash: 000dfc0 Dither in postprocessing has no effect in final render (Blender internal) when i press F12. **Exact steps for others to reproduce the error** Open Blender Load factory settings Select Camera press - [x]- [x]- [x]- [x]- [x][Return][F12] then change dither to 2 and press [F12] again. same color bandings are visible
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @stone-3

Added subscriber: @stone-3

Added subscriber: @ConstantinRahn

Added subscriber: @ConstantinRahn

This issue was referenced by 56ca7f34dd

This issue was referenced by 56ca7f34dd602208880a41de6923fa71ebf83a29

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 33cd5f33cd

This issue was referenced by 33cd5f33cdc00a9e3742567adbcb6cd55e347fbf

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Added subscriber: @dfelinto

Added subscriber: @dfelinto

This issue was referenced by 93608e4f3b

This issue was referenced by 93608e4f3bba2c24f46376177fdc1d4fdef98884

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 36370d56c2

This issue was referenced by 36370d56c255e5b1783dc55075c2ec21700650ea
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45237
No description provided.