Fix T45237: Dither dosn't work in Blender Internal Renderer after Multi-View