source/blender/render/intern/source/pipeline.c
@@ -410,7 +410,7 @@ void RE_AcquireResultImage(Render *re, RenderResult *rr, const int view_id)
 					rr->rectz = RE_RenderLayerGetPass(rl, SCE_PASS_Z, rv->name);
 			}
 
-			rr->have_combined = (rv->rectf != NULL);
+			rr->have_combined = (rr->rectf != NULL);
 			rr->layers = re->result->layers;
 			rr->views = re->result->views;
 
